tests/ui/abi/sparcv8plus.sparc_cpu_v9.stderr
<<<<<<< HEAD
error: -v8plus,+v9
  --> $DIR/sparcv8plus.rs:42:1
||||||| parent of 99fb06ca22e (tests: use minicore more)
error: +v8plus,+v9
  --> $DIR/sparcv8plus.rs:34:1
=======
error: +v8plus,+v9
  --> $DIR/sparcv8plus.rs:33:1
>>>>>>> 99fb06ca22e (tests: use minicore more)
   |
LL | compile_error!("-v8plus,+v9");
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

